# yapml

./: .gitignore  LICENSE  README.md  config.py  datamodel.py  fixtures.py  main.py  pyproject.toml  yamlp.py
client/: __init__.py  box_detection_sample.py
src/yamlp/: config.py  datamodel.py  db.py  fixtures.py  webapp.py  yamlp.py
src/yamlp/client/: __init__.py  box_detection_sample.py  labels_page.py  navbar.py  render_labels.py  render_samples.py  samples_page.py  styles.py
src/yamlp/server/: api_routes.py  ui_routes.py  webapp.py
src/yapml/: datamodel.py  db.py  fixtures.py  image_processing.py  utils.py  yapml.py
src/yapml/client/: __init__.py  admin_page.py  functions_page.py  labels_page.py  navbar.py  page_templates.py  samples_page.py  styles.py  utils.py
src/yapml/server/: api_routes.py  ui_routes.py  webapp.py
src/yapml/server/api/: __init__.py  admin_routes.py  boundingbox_routes.py  function_routes.py  label_routes.py  sample_routes.py
tests/: conftest.py
tests/api/: test_boxes.py  test_labels.py  test_samples.py
