[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[project]
name = "yapml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "ipykernel>=6.29.5",
    "lancedb>=0.21.1",
    "modal>=0.73.67",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "python-fasthtml>=0.12.1",
    "requests>=2.32.3",
    "ruff>=0.9.7",
    "sqlmodel>=0.0.24",
]
