[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pyright]
typeCheckingMode = "standard"

[project]
name = "yapml"
version = "0.1.0"
description = "Full-stack Machine Learning Platform built in pure Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "modal>=0.73.67",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "python-fasthtml>=0.12.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pyright>=1.1.398", "pytest>=8.3.5", "ruff>=0.11.2"]
